Fix section gap and Add About header

--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,40 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
+  gap: 64px;
 }
 
 a,
 u {
   text-decoration: none;
+}
+
+button {
+  height: 48px;
+  background: #1e488f;
+  border-radius: 4px;
+  padding: 12px;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin: 24px;
+
+  /* fount */
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  color: #fff;
+}
+
+button:hover {
+  background: #1e488f;
+  box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
+}
+
+button:active {
+  background: #0a2759;
 }
 
 nav.navbar {
@@ -66,7 +95,6 @@ section#headline {
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  padding: 64px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -157,7 +185,8 @@ section#works {
   gap: 64px;
 }
 
-section#works > header {
+section#works > header,
+section#about > header {
   /* border: 2px solid blue; */
   grid-row: 1 / 2;
   grid-column: 1 / -1;
@@ -167,7 +196,8 @@ section#works > header {
   align-items: center;
 }
 
-section#works > header h2 {
+section#works > header h2,
+section#about > header h2 {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -176,6 +206,18 @@ section#works > header h2 {
   margin: 0;
   padding: 0 32px;
   text-align: center;
+}
+
+section#works > header p,
+section#about > header p {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  color: #42526e;
+  padding: 0 16px;
 }
 
 section#works article {
@@ -189,6 +231,8 @@ section#works article {
   border-radius: 16px;
   border: 2px solid #e2edff;
   margin: 0 16px;
+  align-self: center;
+  justify-self: center;
 }
 
 section#works article .card-img {
@@ -245,32 +289,4 @@ section#works .card-body li {
   letter-spacing: 0.03em;
   color: #3a4a42;
   text-align: center;
-}
-
-section#works .card-body button {
-  height: 48px;
-  background: #1e488f;
-  border-radius: 4px;
-  padding: 12px;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  margin: 24px;
-
-  /* fount */
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 17px;
-  line-height: 24px;
-  color: #fff;
-}
-
-section#works .card-body button:hover {
-  background: #1e488f;
-  box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
-}
-
-section#works .card-body button:active {
-  background: #0a2759;
 }
